--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,13 +1,14 @@
-numpy
-scipy
-matplotlib
-seaborn
-tqdm
-scikit-learn
-scikit-image
-opencv-python
-pipdeptree
-ipykernel
-ipywidgets
-python-dotenv
+numpy==1.26.3
+scipy==1.12.0
+matplotlib==3.8.2
+seaborn==0.13.1
+tqdm==4.66.1
+scikit-learn==1.4.0
+scikit-image==0.22.0
+opencv-python==4.9.0.80
+pipdeptree==2.13.2
+ipykernel==6.29.0
+ipywidgets==8.1.1
+python-dotenv==1.0.1
 numpy-indexed==0.3.7
+plotly==5.20.0
