rename hooks directory

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,6 @@ repos:
       - id: ipynb-cleaner
         name: Notebook Output Cleaner
         description: This hook clears Jupyter Notebook output and metadata
-        entry: ./hooks/ipynb-fmt.sh
+        entry: ./.githooks/ipynb-fmt.sh
         language: script
         types: [file]
