--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,3 +7,8 @@ repos:
         entry: ./.githooks/ipynb-fmt.sh
         language: script
         types: [file]
+
+  - repo: https://github.com/psf/black
+    rev: 24.10.0
+    hooks:
+    - id: black
