--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pre-commit = "4.0.1"
 mypy = "^1.13.0"
 isort = "^5.13.2"
 black = {extras = ["jupyter"], version = "^24.10.0"}
+pytest = "^8.3.4"
 
 
 [build-system]
