--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ scipy = "1.12.0"
 seaborn = "0.13.1"
 tqdm = "4.66.1"
 pyswarms = "1.3.0"
+jupyter-bbox-widget = "0.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
