--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,83 @@
-ipykernel==6.29.0
-ipython==8.24.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.1
-kaleido==0.2.1
-lsnms==0.4.4
-matplotlib==3.8.2
-nbformat==5.10.4
-numba==0.57.1
-numba-progress==1.1.0
-numpy==1.24.4
-numpy-indexed==0.3.7
-opencv-python==4.9.0.80
-pandas==2.2.2
-pillow==10.3.0
-pipdeptree==2.13.2
-plotly==5.20.0
-python-dotenv==1.0.1
-scikit-image==0.22.0
-scikit-learn==1.4.0
-scipy==1.12.0
-seaborn==0.13.1
-tqdm==4.66.1
-pyswarms==1.3.0
-nbstripout==0.8.0
-pre_commit==4.0.1
-jupyter-bbox-widget==0.6.0
+anywidget==0.9.13 
+appnope==0.1.4 
+asttokens==2.4.1 
+attrs==24.2.0 
+cffi==1.17.1 
+colorama==0.4.6 
+comm==0.2.2 
+contourpy==1.3.1 
+cycler==0.12.1 
+debugpy==1.8.9 
+decorator==5.1.1 
+executing==2.1.0 
+fastjsonschema==2.20.0 
+fonttools==4.55.0 
+future==1.0.0 
+imageio==2.36.0 
+ipykernel==6.29.0 
+ipython-genutils==0.2.0 
+ipython==8.24.0 
+ipywidgets==8.1.5 
+jedi==0.19.2 
+joblib==1.4.2 
+jsonschema-specifications==2024.10.1 
+jsonschema==4.23.0 
+jupyter-bbox-widget==0.6.0 
+jupyter-client==8.6.3 
+jupyter-core==5.7.2 
+jupyterlab-widgets==3.0.13 
+kaleido==0.2.1 
+kiwisolver==1.4.7 
+lazy-loader==0.4 
+llvmlite==0.40.1 
+lsnms==0.4.4 
+matplotlib-inline==0.1.7 
+matplotlib==3.8.2 
+nbformat==5.10.4 
+nest-asyncio==1.6.0 
+networkx==3.4.2 
+numba-progress==1.1.0 
+numba==0.57.1 
+numpy-indexed==0.3.7 
+numpy==1.24.4 
+opencv-python==4.9.0.80 
+packaging==24.2 
+pandas==2.2.2 
+parso==0.8.4 
+pexpect==4.9.0 
+pillow==10.3.0 
+platformdirs==4.3.6 
+plotly==5.20.0 
+prompt-toolkit==3.0.48 
+psutil==6.1.0 
+psygnal==0.11.1 
+ptyprocess==0.7.0 
+pure-eval==0.2.3 
+pycparser==2.22 
+pygments==2.18.0 
+pyparsing==3.2.0 
+pyswarms==1.3.0 
+python-dateutil==2.9.0.post0 
+python-dotenv==1.0.1 
+pytz==2024.2 
+pywin32==308 
+pyyaml==6.0.2 
+pyzmq==26.2.0 
+referencing==0.35.1 
+rpds-py==0.21.0 
+scikit-image==0.22.0 
+scikit-learn==1.4.0 
+scipy==1.12.0 
+seaborn==0.13.1 
+six==1.16.0 
+stack-data==0.6.3 
+tenacity==9.0.0 
+threadpoolctl==3.5.0 
+tifffile==2024.9.20 
+tornado==6.4.2 
+tqdm==4.66.1 
+traitlets==5.14.3 
+typing-extensions==4.12.2 
+tzdata==2024.2 
+wcwidth==0.2.13 
+widgetsnbextension==4.0.13 
